hphp/hack/test/typecheck/catch_non_exception.php
<?hh // strict

class NonException {}

function f(): void {
  try {
  } catch (NonException $m) {
  }
}
